--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,63 @@
-Hello world!
+<html>
+
+    <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        
+        <link rel="stylesheet" href="style.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Homemade+Apple&family=Indie+Flower&family=Just+Another+Hand&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Pacifico&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <header>
+
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="row left-div">
+                    <img class="siteLogoImg" src="/images/logo.svg" alt="Logo">
+                    <div class="siteLogoText">TBRd</div>
+                </div>
+                <img class="PFPImg right-div" src="/images/loggedOutPFP.svg" alt="pfp">
+            </div>
+
+            <nav class="navbar navbar-expand-sm justify-content-center">
+
+                <div class="container-fluid mainNavBar">
+
+                    <div class="row align-items-left">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <button class="navBarTexts">Home</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="navBarTexts">Trending</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="navBarTexts">My Reads</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="navBarTexts">Browse All</button>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Literature..." name="search">
+                    </div>
+
+                </div>
+
+            </nav>
+
+        </header>
+
+        <section>
+
+
+        </section>
+
+    </body>
+
+</html>
