--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,6 +55,9 @@
 
         <section>
 
+            <div class="title-text"><h1>Welcome to TBRd!</h1></div>
+
+            <div class="paragraph-text"><h3>Home page text</h3></div> <!-- Will be changed later -->
 
         </section>
 
