--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,22 +18,22 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <img class="siteLogoImg" src="/images/logo.svg" alt="Logo">
+                        <img class="siteLogoImg" src="../images/logo.svg" alt="Logo">
                         <div class="siteLogoText">TBRd</div>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
                         <button class="unstyled-button" data-toggle="dropdown">
-                            <img class="PFPImg" src="/images/loggedOutPFP.svg" alt="pfp">
+                            <img class="PFPImg" src="../images/loggedOutPFP.svg" alt="pfp">
                         </button>
                         <div class="dropdown-menu text-center">
-                            <a class="dropdown-item" href="userPages/profile.html">My Profile</a>
-                            <a class="dropdown-item" href="userPages/myReads.html">My Reads</a>
-                            <a class="dropdown-item" href="userPages/myCollections.html">My Collections</a>
-                            <a class="dropdown-item" href="userPages/settings.html">User Settings</a>
+                            <a class="dropdown-item" href="../userPages/profile.html">My Profile</a>
+                            <a class="dropdown-item" href="../userPages/myReads.html">My Reads</a>
+                            <a class="dropdown-item" href="../userPages/myCollections.html">My Collections</a>
+                            <a class="dropdown-item" href="../userPages/settings.html">User Settings</a>
                             <div class="dropdown-item"> <hr style="background-color: var(--darkBrown);"> </div>
-                            <a class="dropdown-item" href="loginPages/login.html">Login / Create Account</a>
-                            <a class="dropdown-item" href="loginPages/login.html">Logout</a>
+                            <a class="dropdown-item" href="../loginPages/login.html">Login / Create Account</a>
+                            <a class="dropdown-item" href="../loginPages/login.html">Logout</a>
                         </div>
                     </div>
 
@@ -47,22 +47,22 @@
                     <div class="row align-items-left">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <button class="navBarTexts">Home</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/trending.html">
+                                <a href="../subpages/trending.html">
                                     <button class="navBarTexts">Trending</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/collections.html">
+                                <a href="../subpages/collections.html">
                                     <button class="navBarTexts">Collections</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/browse.html">
+                                <a href="../subpages/browse.html">
                                     <button class="navBarTexts">Browse All</button>
                                 </a>
                             </li>
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="d-flex justify-content-between align-items-center">
-                        <img src="images/search.svg" style="height: 3.5vh;">
+                        <img src="../images/search.svg" style="height: 3.5vh;">
                         <div class="search-container">
                             <input type="text" placeholder="Search Literature..." name="search">
                         </div>
@@ -84,9 +84,10 @@
 
         <section>
 
-            <div class="title-text"><h1>Welcome to TBRd!</h1></div>
-
-            <div class="paragraph-text"><h3>Home page text</h3></div> <!-- Will be changed later -->
+            <div class="container-fluid sectionContentHolder">
+                <img src="../images/loggedOutPFP.svg" class="userPFP">
+                <div> UserName#0000 </div>
+            </div>
 
         </section>
 
