Updated titles and added contact.html and about.html

--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -84,9 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>Welcome to TBRd!</h1></div>
-
-            <div class="paragraph-text"><h3>Home page text</h3></div> <!-- Will be changed later -->
+            <div class="title-text"><h1>My Collections</h1></div>
 
         </section>
 
