--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -84,9 +84,9 @@
 
         <section>
 
-            <div class="title-text"><h1>Welcome to TBRd!</h1></div>
+            <div class="title-text"><h1>Create Account</h1></div>
 
-            <div class="paragraph-text"><h3>Home page text</h3></div> <!-- Will be changed later -->
+            <div class="paragraph-text"><h3>New to TBRd? Create your account here!</h3></div>
 
         </section>
 
