worked on profile page

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -84,11 +84,26 @@
 
         <section>
 
-            <div class="container-fluid sectionContentHolder">
-                <img src="../images/loggedOutPFP.svg" class="userPFP">
-                <div> UserName#0000 </div>
+            <div class="d-flex flex-column align-items-center text-center">
+                <div class="sectionContentHolderGreen">
+                    <img src="../images/loggedOutPFP.svg" class="userPFP mb-2">
+                    <div class="userName">UserName#0000</div>
+                </div>
             </div>
-
+            <div class="d-flex align-items-center text-center">
+                <span class="thirdSectionBrown">
+                    <div class="thirdSectionTopperBrown"> About Me </div>
+                    content
+                </span>
+                <span class="thirdSectionBrown">
+                    <div class="thirdSectionTopperBrown"> My Reads </div>
+                    content
+                </span>
+                <span class="thirdSectionBrown">
+                    <div class="thirdSectionTopperBrown"> My Collections </div>
+                    content
+                </span>
+            </div>
         </section>
 
         <!-- scripts for bootstrap JS content -->
