--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,9 +84,51 @@
 
         <section>
 
-            <div class="title-text"><h1>Welcome to TBRd!</h1></div>
+            <h1 class="title-text"> Welcome to TBRd! </h1>
+            <h2 class="sub-title-text"> A community for every type of reader. </h2>
 
-            <div class="paragraph-text"><h3>Home page text</h3></div> <!-- Will be changed later -->
+            <div class="d-flex flex-column align-items-center text-center">
+                <div class="sectionContentHolderGreen">
+
+                    <p> <h2 style="font-weight: bold; margin: 1vw;"> Our Mission </h2> </p>
+                    <p style="margin-bottom: 3vw;">
+                        Letterboxd reshaped how people connect over movies, a
+                        sleek, social platform where you can log, review, and discover
+                        through community. We’re bringing that same idea to literature, but
+                        with a modern twist designed for today’s readers: not just novels,
+                        but also plays, short stories, and essays. Our app will let users: Log
+                        their reading journey quickly, from anywhere. Review and rate
+                        works to spark meaningful conversation. Browse and follow public
+                        collections to see what friends, colleagues, or even critics are
+                        reading, and get inspired by curated lists. Connect socially by
+                        following other readers, sharing insights, and building a literary
+                        community that feels alive and approachable. Unlike Goodreads,
+                        which feels dated and transactional, our platform is clean, intuitive,
+                        and designed for busy young professionals who want discovery,
+                        connection, and inspiration without the clutter. In short: we’re
+                        making reading fun and shareable again, a platform that fits
+                        seamlessly into everyday life, whether you’re looking for your next
+                        subway read, curating a list of plays you’ve loved, or exploring
+                        someone else’s favorite short stories.
+                    </p>
+
+                    <hr style="background-color: var(--offWhite); width: 50vw;">
+
+                    <p> <h2 style="font-weight: bold; margin-top: 3vw;"> Where can I get started? </h2> </p>
+                    <div class="d-flex flex-column align-items-center text-center">
+                        <div class="thirdSectionDarkBrown"> 
+                            <div style="font-size: 5vh;"> Create an Account </div>
+                        </div>
+                        <div class="thirdSectionDarkBrown"> 
+                            Start Exploring Our Library 
+                        </div>
+                        <div class="thirdSectionDarkBrown"> 
+                            Check Out What's Trending 
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
         </section>
 
