Added content to My Collections and My Reads pages

--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -84,7 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>Collections</h1></div>
+            <h1 class="title-text">Collections</h1>
 
         </section>
 
