--- a/frontend/subpages/trending.html
+++ b/frontend/subpages/trending.html
@@ -84,7 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>Trending Literature</h1></div>
+            <h1 class="title-text">Trending Literature</h1>
 
         </section>
 
