--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -84,7 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>Settings</h1></div>
+            <h1 class="title-text">Settings</h1>
 
         </section>
 
