--- a/frontend/subpages/about.html
+++ b/frontend/subpages/about.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>About TBRd</h1></div>
+            <h1 class="title-text">About TBRd</h1>
 
             <div class="paragraph-text"><h3>About page text</h3></div> <!-- Will be changed later -->
 
