--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -84,7 +84,7 @@
 
         <section>
 
-            <div class="title-text"><h1>All Literature</h1></div>
+            <h1 class="title-text">All Literature</h1>
 
         </section>
 
