--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -84,7 +84,30 @@
 
         <section>
 
-            <div class="title-text"><h1>My Collections</h1></div>
+            <h1 class="title-text">My Collections</h1>
+
+            <select class="collections-dropdown">
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+            </select>
+
+            <br><br>
+
+            <table class="my-collections-reads-table">
+                <tr>
+                    <th>Collection Title</th>
+                </tr>
+                <tr>
+                    <td>Book1</td>
+                </tr>
+                <tr>
+                    <td>Book2</td>
+                </tr>
+                <tr>
+                    <td>Book3</td>
+                </tr>
+            </table>
 
         </section>
 
