--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,15 +116,9 @@
 
                     <p> <h2 style="font-weight: bold; margin-top: 3vw;"> Where can I get started? </h2> </p>
                     <div class="d-flex flex-column align-items-center text-center">
-                        <div class="thirdSectionDarkBrown"> 
-                            <div style="font-size: 5vh;"> Create an Account </div>
-                        </div>
-                        <div class="thirdSectionDarkBrown"> 
-                            Start Exploring Our Library 
-                        </div>
-                        <div class="thirdSectionDarkBrown"> 
-                            Check Out What's Trending 
-                        </div>
+                        <a href="loginPages/createAccount.html"> <button class="mainButtonBrown"> Create an Account </button> </a>
+                        <a href="subpages/browse.html"> <button class="mainButtonBrown"> Start Exploring Our Library </button> </a>
+                        <a href="subpages/trending.html"> <button class="mainButtonBrown"> Check Out What's Trending </button> </a>
                     </div>
 
                 </div>
