--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -91,17 +91,65 @@
                 </div>
             </div>
             <div class="d-flex align-items-center text-center">
+
                 <span class="thirdSectionBrown">
                     <div class="thirdSectionTopperBrown"> About Me </div>
-                    content
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Bio </div>
+                        Here's a small blurb about me and what I enjoy reading. Check out my profile!
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Favorite Genres </div>
+                        Mystery, Horror, Romance
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Favorite Book </div>
+                        How to Kill a Mockingbird
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Member Since </div>
+                        October 22nd, 2025
+                    </div>
                 </span>
+
                 <span class="thirdSectionBrown">
                     <div class="thirdSectionTopperBrown"> My Reads </div>
-                    content
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Book One </div>
+                        I really liked this book. Here's some info on why I liked this book so much.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Book Two </div>
+                        Example review.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Book Three </div>
+                        Example review.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Book Four </div>
+                        Example review.
+                    </div>
                 </span>
+
                 <span class="thirdSectionBrown">
                     <div class="thirdSectionTopperBrown"> My Collections </div>
-                    content
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Collection One </div>
+                        Here's a description on what kinds of literature I filled this collection with.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Collection Two </div>
+                        Example collection decription.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Collection Three </div>
+                        Example collection decription.
+                    </div>
+                    <div class="thirdSectionText">
+                        <div style="font-weight: bold; font-size: 3vh;"> Collection Four </div>
+                        Example collection decription.
+                    </div>
                 </span>
             </div>
         </section>
