aligned collections/reads pages to nav bar

--- a/frontend/userPages/myCollections.html
+++ b/frontend/userPages/myCollections.html
@@ -84,30 +84,35 @@
 
         <section>
 
-            <h1 class="title-text">My Collections</h1>
+            <div class="d-flex flex-column align-items-center text-center">
+                <div class="sectionContentHolderClear">
 
-            <select class="collections-dropdown">
-                <option>One</option>
-                <option>Two</option>
-                <option>Three</option>
-            </select>
+                    <h1 class="title-text">My Collections</h1>
 
-            <br><br>
+                    <select class="collections-dropdown">
+                        <option>One</option>
+                        <option>Two</option>
+                        <option>Three</option>
+                    </select>
 
-            <table class="my-collections-reads-table">
-                <tr>
-                    <th>Collection Title</th>
-                </tr>
-                <tr>
-                    <td>Book1</td>
-                </tr>
-                <tr>
-                    <td>Book2</td>
-                </tr>
-                <tr>
-                    <td>Book3</td>
-                </tr>
-            </table>
+                    <br><br>
+
+                    <table class="my-collections-reads-table">
+                        <tr>
+                            <th>Collection Title</th>
+                        </tr>
+                        <tr>
+                            <td>Book1</td>
+                        </tr>
+                        <tr>
+                            <td>Book2</td>
+                        </tr>
+                        <tr>
+                            <td>Book3</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
 
         </section>
 
