--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -84,31 +84,36 @@
 
         <section>
 
-            <h1 class="title-text">My Reads</h1>
+            <div class="d-flex flex-column align-items-center text-center">
+                <div class="sectionContentHolderClear">
 
-            <table class="my-collections-reads-table">
-                <tr>
-                    <th>Name</th>
-                    <th>Date Read</th>
-                    <th>Review Given</th>
-                </tr>
-                <tr>
-                    <td>Book1</td>
-                    <td>October 21, 2025</td>
-                    <td>Review</td>
-                </tr>
-                <tr>
-                    <td>Book2</td>
-                    <td>October 5, 2025</td>
-                    <td>Review</td>
-                </tr>
-                <tr>
-                    <td>Book3</td>
-                    <td>September 27, 2025</td>
-                    <td>Review</td>
-                </tr>
-            </table>
+                    <h1 class="title-text">My Reads</h1>
 
+                    <table class="my-collections-reads-table">
+                        <tr>
+                            <th>Name</th>
+                            <th>Date Read</th>
+                            <th>Review Given</th>
+                        </tr>
+                        <tr>
+                            <td>Book1</td>
+                            <td>October 21, 2025</td>
+                            <td>Review</td>
+                        </tr>
+                        <tr>
+                            <td>Book2</td>
+                            <td>October 5, 2025</td>
+                            <td>Review</td>
+                        </tr>
+                        <tr>
+                            <td>Book3</td>
+                            <td>September 27, 2025</td>
+                            <td>Review</td>
+                        </tr>
+                    </table>
+
+                </div>
+            </div>
         </section>
 
         <!-- scripts for bootstrap JS content -->
