Changed title in top left so that clicking it takes user to home page

--- a/frontend/subpages/about.html
+++ b/frontend/subpages/about.html
@@ -19,7 +19,7 @@
 
                     <div class="row left-div">
                         <img class="siteLogoImg" src="/images/logo.svg" alt="Logo">
-                        <div class="siteLogoText">TBRd</div>
+                        <a href="../index.html" class="siteLogoText">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
