--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <img class="siteLogoImg" src="/images/logo.svg" alt="Logo">
+                        <a href="index.html"><img class="siteLogoImg" src="/images/logo.svg" alt="Logo"></a>
                         <a href="index.html" class="siteLogoText">TBRd</a>
                     </div>
 
