--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -80,36 +80,39 @@
 
             </nav>
 
-            <section class="container mt-4">
-                <form id="signup-form" class="w-50 mx-auto">
+        </header>
+
+
+
+        <section>
+
+            <h1 class="login-title">Create Account</h1>
+
+            <section class="container login-container">
+
+                <form id="signup-form">
                     <div class="form-group">
                         <label>Email address</label>
-                        <input type="email" id="signup-email" class="form-control" required />
+                        <input type="email" id="signup-email" class="form-control" placeholder="name@example.com" required />
                     </div>
 
-                    <div class="form-group mt-2">
+                    <div class="form-group">
                         <label>Username</label>
                         <input type="text" id="signup-username" class="form-control" required />
                     </div>
 
-                    <div class="form-group mt-2">
+                    <div class="form-group">
                         <label>Password</label>
                         <input type="password" id="signup-password" class="form-control" required />
                     </div>
 
-                    <button type="submit" class="btn btn-primary mt-3 w-100">Create Account</button>
+                    <div class="text-center mt-5">
+                        <button type="submit" class="mainButtonBrownSmall">Create Account</button>
+                    </div>
                 </form>
                 <p id="signup-message" class="text-center mt-3"></p>
+
             </section>
-
-        </header>
-
-        <section>
-
-            <div class="title-text"><h1>Create Account</h1></div>
-
-            <div class="paragraph-text"><h3>New to TBRd? Create your account here!</h3></div>
-
         </section>
 
         <!-- scripts for bootstrap JS content -->
