Login with Discord

--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -144,7 +144,7 @@
                 });
 
                 if (error) {
-                    message.textContent = `Error: ${error.message}`;
+                    message.textContent = 'Error: ${error.message}';
                     message.style.color = "red";
                 } else { 
                     message.textContent = "Account created! Please check your email for confirmation.";
