--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -161,6 +161,9 @@
 
         <!-- Script for searching-->
         <script src="../search.js"></script>
+
+        <!-- Script for checking user login and logout functionality-->
+        <script type="module" src="../js/session.js"></script>
     </body>
 
 </html>
