minor formatting adjustments

--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -89,17 +89,21 @@
                 <div class="browserContainer">
 
                     <div class="filter">
-                        <div class="filterTitle"> Select Filters for your Search </div>
+                        <div class="filterTitle mb-3"> Select Filters for your Search </div>
                         <form>
-                            <fieldset>
+                            <fieldset class="mb-4">
                                 <label> Search by Title/Author </label>
-                                <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput">
+                                <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput" style="margin-left: 0;">
                             </fieldset>
-                            <fieldset>
+                            <fieldset class="mb-4">
                                 <label> Minimum Rating </label>
-                                <label> Maximum Rating </label>
                             </fieldset>
-                            <label> Publish Date Range </label>
+                            <fieldset class="mb-4">
+                                <label> Maximum Rating </label> 
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> Publish Date Range </label> 
+                            </fieldset>
                         </form>
                     </div>
 
