--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -86,34 +86,35 @@
 
             <h1 class="login-title">Log In</h1>
 
-            <section class="container login-container">
+            <section class="container login-container mb-5">
                 <form id="login-form">
 
-                    <div class="form-group">
-                        <label>Email address</label>
-                        <input type="email" id="login-email" class="form-control" placeholder="name@example.com" required />
-                    </div>
+                    <label>Email address</label>
+                    <input type="email" id="login-email" class="form-control" placeholder="name@example.com" required />
 
-                    <div class="form-group">
+                    <div class="form-group mt-3">
                         <label>Password</label>
                         <input type="password" id="login-password" class="form-control" required />
                     </div>
 
+                    <p id="login-message" class="text-center mt-3" style="background-color: white;"></p>
+
                     <div class="text-center mt-5">
-                        <button type ="submit" class="mainButtonBrownSmall mb-5">Log In</button>
+                        <button type ="submit" class="mainButtonBrownSmall mb-4">Log In</button>
+
+                        <div class="text-center mt-4" style="font-weight: bold;">
+                            Alternative Sign-in Methods
+                            <button id="discord-login" class="btn btn-secondary w-100 mt-3 mb-5" style="background-color: rgb(61, 60, 60);">
+                                <img src="../images/discord-icon.svg" alt="" style="height:20px; margin-right:8px;">
+                                Log in with Discord
+                            </button>
+                        </div>
                         <p> 
-                            <a href="createAccount.html"> Don't have an accont? Create one here! </a>
+                            <a href="createAccount.html"> Don't have an account? Create one here! </a>
                         </p>
                     </div>
                 </form>
-                <p id="login-message" class="text-center mt-3"></p>
             </section>
-                <div class="text-center mt-4">
-                    <button id="discord-login" class="btn btn-secondary w-50">
-                        <img src="../images/discord-icon.svg" alt="" style="height:20px; margin-right:8px;">
-                        Log in with Discord
-                    </button>
-                </div>
 
         </section>
 
