--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -69,13 +69,6 @@
                         </ul>
                     </div>
 
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img src="../images/search.svg" style="height: 3.5vh;">
-                        <div class="search-container">
-                            <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
-                        </div>
-                    </div>
-
                 </div>
 
             </nav>
@@ -89,8 +82,9 @@
                 <div class="browserContainer">
 
                     <div class="filter">
-                        <div class="filterTitle mb-3"> Select Filters for your Search </div>
+                        <div class="filterTitle mb-2"> Select Filters for your Search </div>
                         <form>
+                            <hr style="background-color: var(--offWhite);" class="mb-4">
                             <fieldset class="mb-4">
                                 <label> Search by Title/Author </label>
                                 <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput" style="margin-left: 0;">
