--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -157,7 +157,7 @@
                 const { data, error } = await supabase.auth.signInWithOAuth({
                     provider: "discord",
                     options: {
-                        redirectTo: 'http://127.0.0.1:8000/index.html',
+                        redirectTo: 'https://tbrd.onrender.com/index.html',
                     },
                 });
 
