added contact us page

--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -52,18 +52,18 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../subpages/trending.html">
-                                    <button class="navBarTexts">Trending</button>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="../subpages/collections.html">
+                                <a href="collections.html">
                                     <button class="navBarTexts">Collections</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../subpages/browse.html">
+                                <a href="browse.html">
                                     <button class="navBarTexts">Browse All</button>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contactUs.html">
+                                    <button class="navBarTexts">Contact Us</button>
                                 </a>
                             </li>
                         </ul>
