--- a/frontend/subpages/search.html
+++ b/frontend/subpages/search.html
@@ -52,11 +52,6 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="trending.html">
-                                    <button class="navBarTexts">Trending</button>
-                                </a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="collections.html">
                                     <button class="navBarTexts">Collections</button>
                                 </a>
@@ -64,6 +59,11 @@
                             <li class="nav-item">
                                 <a href="browse.html">
                                     <button class="navBarTexts">Browse All</button>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contactUs.html">
+                                    <button class="navBarTexts">Contact Us</button>
                                 </a>
                             </li>
                         </ul>
