--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -52,18 +52,18 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../subpages/trending.html">
-                                    <button class="navBarTexts">Trending</button>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="../subpages/collections.html">
+                                <a href="collections.html">
                                     <button class="navBarTexts">Collections</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="../subpages/browse.html">
+                                <a href="browse.html">
                                     <button class="navBarTexts">Browse All</button>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contactUs.html">
+                                    <button class="navBarTexts">Contact Us</button>
                                 </a>
                             </li>
                         </ul>
@@ -101,7 +101,7 @@
                         </form>
                         <div class="flexBottom">
                             <a href="#"><img src="../images/left.svg" style="width: 1vw;"></a>
-                            <span style="margin-left: 1vw; margin-right: 1vw;"> 1 / 5 </span>
+                            <span style="margin-left: 1vw; margin-right: 1vw;">1 / 5</span>
                             <a href="#"><img src="../images/right.svg" style="width: 1vw;"></a>
                         </div>
                     </div>
