--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -123,6 +123,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
+        <!-- Script for checking user login and logout functionality-->
+        <script type="module" src="../js/session.js"></script>
+        
         <!-- Script for searching-->
         <script src="../search.js"></script>   
       
