--- a/frontend/loginPages/createAccount.html
+++ b/frontend/loginPages/createAccount.html
@@ -47,22 +47,22 @@
                     <div class="row align-items-left">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <button class="navBarTexts">Home</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/collections.html">
+                                <a href="../subpages/collections.html">
                                     <button class="navBarTexts">Collections</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/browse.html">
+                                <a href="../subpages/browse.html">
                                     <button class="navBarTexts">Browse All</button>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="subpages/.html">
+                                <a href="../subpages/contactUs.html">
                                     <button class="navBarTexts">Contact Us</button>
                                 </a>
                             </li>
